log
Sat 22 Mar 2025 12:20:50 AM UTC: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat 22 Mar 2025 12:58:35 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
0a2b508
Sat 22 Mar 2025 12:59:29 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:19: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |          elemento = i;
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
c7489dc
Sat 22 Mar 2025 01:03:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ff1ea86
Sat 22 Mar 2025 01:06:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:32: error: too few arguments to function ‘calloc’
   48 |         int * elemento = (int*)calloc(sizeof(int));
      |                                ^~~~~~
In file included from test.c:2:
/nix/store/lcxvgkg659vbvdq86mhxa599wn48f35c-glibc-2.40-36-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
9be487a
Sat 22 Mar 2025 01:06:47 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:40: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   48 |         int * elemento = (int*)realloc(sizeof(int));
      |                                        ^~~~~~~~~~~
      |                                        |
      |                                        long unsigned int
In file included from test.c:2:
/nix/store/lcxvgkg659vbvdq86mhxa599wn48f35c-glibc-2.40-36-dev/include/stdlib.h:683:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  683 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
exercises.c:48:32: error: too few arguments to function ‘realloc’
   48 |         int * elemento = (int*)realloc(sizeof(int));
      |                                ^~~~~~~
/nix/store/lcxvgkg659vbvdq86mhxa599wn48f35c-glibc-2.40-36-dev/include/stdlib.h:683:14: note: declared here
  683 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a4525f0
Sat 22 Mar 2025 01:07:02 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
27262dd
Sat 22 Mar 2025 01:07:33 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
62ad442
Sat 22 Mar 2025 02:14:56 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:4: error: expected ‘,’ or ‘;’ before ‘while’
   64 |    while(L =! NULL)
      |    ^~~~~
exercises.c:63:8: error: unused variable ‘suma’ [-Werror=unused-variable]
   63 |    int suma = 0
      |        ^~~~
exercises.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1e89e56
Sat 22 Mar 2025 02:15:23 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:10: error: wrong type argument to unary plus
   65 |    suma =+ L;
      |          ^
exercises.c:63:8: error: variable ‘suma’ set but not used [-Werror=unused-but-set-variable]
   63 |    int suma = 0;
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
790d810
Sat 22 Mar 2025 02:15:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:9: error: invalid use of undefined type ‘struct List’
   65 |    suma += L;
      |         ^~
exercises.c:65:9: error: assignment to ‘int’ from ‘List *’ makes integer from pointer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
b304b9f
Sat 22 Mar 2025 02:16:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:16: error: invalid use of undefined type ‘struct List’
   65 |    suma = suma + L;
      |                ^
exercises.c:65:9: error: assignment to ‘int’ from ‘List *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |    suma = suma + L;
      |         ^
cc1: all warnings being treated as errors
Compilation failed
a8fe92e
Sat 22 Mar 2025 02:20:12 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
f3aa7ba
Sat 22 Mar 2025 02:37:34 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   64 |    while(L != NULL)
      |    ^~~~~
exercises.c:66:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   66 |       L = next(L);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
e8d5fd2
Sat 22 Mar 2025 02:37:43 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   65 |    while(L != NULL);
      |    ^~~~~
exercises.c:66:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   66 |       suma = suma + *(int*)first (L);
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
c790b8b
Sat 22 Mar 2025 02:38:08 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   65 |    while(L != NULL)
      |    ^~~~~
exercises.c:68:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   68 |       L = next(L);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
25347f5
Sat 22 Mar 2025 02:39:56 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
b5ff947
Sat 22 Mar 2025 02:40:58 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
537400d
Sat 22 Mar 2025 04:58:49 PM UTC: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  2|3
total_score: 20/70
36655e7
